src/pages/ItemGroupInfo/ItemGroupInfo.css
.ItemGroupInfo {
    padding: 0 0.5rem;
    /* padding-top: 6rem; */
}

.ItemGroupInfo .item-info {
    padding: 0 1rem;
}

.ItemGroupInfo .zh>span {
    color: var(--color-text-1);
}

.ItemGroupInfo .en {
    color: var(--color-text-1);
}

.ItemGroupInfo .types {
    display: flex;
    margin-top: .5rem;
    border-radius: 1rem;
    border: var(--color-text-1) solid 1px;
    width: max-content;
    overflow: hidden;
}

.ItemGroupInfo .type {
    padding: 0 .5rem;
    color: var(--color-bg);
    background-color: var(--color-text-1);
    font-weight: 700;
}

.ItemGroupInfo .subtype {
    padding: 0 .5rem;
    color: var(--color-text);
}

.ItemGroupInfo hr {
    border: none;
    width: calc(100% - 2rem);
    height: 1px;
    margin: 1rem 1rem;
    background-color: var(--color-text);
    opacity: .5;
}

.ItemGroupInfo .trade-options-title {
    padding: 0 1rem;
    margin-bottom: .5rem;
}

.ItemGroupInfo .variants-title {
    padding: 0 1rem;
    margin: .5rem 0;
}

.ItemGroupInfo .list-variants {
    padding: 0 .5rem;
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    gap: .5rem;
}

@media screen and (max-width: 719px) {

    .ItemGroupInfo .list-variants {
        grid-template-columns: repeat(1, minmax(0, 1fr));
    }
}

.ItemGroupInfo button.variant {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: .5rem;
    width: 100%;
    padding: .25rem .5rem;
    text-align: start;
    font-weight: 400;
    color: var(--color-text);
    background-color: var(--color-bg-1);
    border-radius: .5rem;
    cursor: pointer;
    transition: background .2s;
}

.ItemGroupInfo button.variant:hover {
    background-color: var(--color-bg-2);
}

.ItemGroupInfo button.variant:focus,
.ItemGroupInfo button.variant:focus-visible {
    background-color: var(--color-bg-2);
    outline: none;
}

.ItemGroupInfo button.variant>.name {
    flex-grow: 1;
}

.ItemGroupInfo button.variant>.price {
    color: hsl(200deg 60% 50%);
    font-family: var(--font-slim);
    font-weight: 600;
    font-variant-numeric: tabular-nums;
}

